# cursed

./: Cargo.toml  README.md
crates/cursed-core/: Cargo.toml
crates/cursed-core/src/: crypto.rs  keeper.rs  protocol.rs
crates/cursed-relay/: Cargo.toml
crates/cursed-relay/src/: extractors.rs  main.rs  service.rs
src/: crypto.rs  keeper.rs  lib.rs  protocol.rs
