[package]
name = "cursed-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
dashmap = "6.1.0"
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
cursed-core = { path = "../cursed-core" }
futures-util = "0.3.31"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1.18.1"
serde = { version = "1.0.226", features = ["derive"] }
axum-macros = "0.5.0"
rooms = { path = "../../../rooms" }
ed25519-dalek = {version= "2", features = ["rand_core"]}
